# ifrs9-credit-risk-engine

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
config/: config.yaml
data/: README.md
data/processed/: macro_quarterly.csv
docs/design/: BENCHMARK_VALIDATION.md
docs/design/specs/: 2026-05-27-credit-risk-enhancements-design.md
outputs/: scorecard_tables.json
reports/: benchmarks.py  model_risk_report.bib  model_risk_report.tex  qa_checks.py  render_latex.py
scripts/: update_readme_metrics.py
src/credit_risk/: __init__.py  pipeline.py
src/credit_risk/business/: __init__.py  cutoff.py  reject_inference.py
src/credit_risk/data/: __init__.py  download.py  download_macro.py  eda.py  leakage.py  loader.py  split.py  synthetic.py  target.py
src/credit_risk/features/: __init__.py  binning.py  selection.py  woe.py
src/credit_risk/models/: __init__.py  ead.py  lgd.py  pd_challenger.py  pd_scorecard.py  pd_term_structure.py  survival.py
src/credit_risk/reporting/: __init__.py  charts.py  render.py  style.py
tests/: conftest.py  test_ab_test.py  test_business.py  test_charts_smoke.py  test_concentration.py  test_data.py  test_ecl_whatif.py  test_economic_capital.py  test_features.py  test_ifrs9.py  test_interpretability.py  test_lgd_ead.py  test_lgd_validation.py  test_lifetime_calibration.py  test_macro_ts.py  test_pit_ttc.py  test_risk.py  test_survival.py  test_upgrades.py  test_validation.py  test_validation_challenges.py  test_validation_stress.py  test_vintage_calibration.py
(+21 files in other folders)
