[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credit-risk"
version = "0.1.0"
description = "End-to-end credit risk modelling & IFRS 9 ECL engine"
requires-python = ">=3.11"
dependencies = [
    # Core
    "pandas>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    # Modelling
    "statsmodels>=0.14",
    "lightgbm>=4.0",
    "optbinning>=0.19",
    "lifelines>=0.27",
    "shap>=0.44",
    # Plots
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.18",
    # Reporting
    "jinja2>=3.1",
    "weasyprint>=60",
    # Config
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    # Data
    "kaggle>=1.5",
    # Quality
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.5",
    "pre-commit>=3.5",
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.optional-dependencies]
dev = ["ipykernel", "jupyterlab"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/credit_risk --cov-report=term-missing -q"

